// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderCustomToolbar should render correctly for smaller screens 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="center"
    className="dscGridToolbar"
    data-test-subj="dscGridToolbar"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlGroup"
          >
            <div
              className="dscGridToolbarControlIconButton"
            >
              keyboard
            </div>
            <div
              className="dscGridToolbarControlIconButton"
            >
              display
            </div>
            <div
              className="dscGridToolbarControlIconButton"
            >
              fullScreen
            </div>
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</React.Fragment>
`;

exports[`renderCustomToolbar should render correctly with an element 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="center"
    className="dscGridToolbar"
    data-test-subj="dscGridToolbar"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <div>
        left
      </div>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <React.Fragment>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="dscGridToolbarControlButton"
            >
              additional
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="dscGridToolbarControlButton"
            >
              column
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="dscGridToolbarControlButton"
            >
              columnSorting
            </div>
          </EuiFlexItem>
        </React.Fragment>
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlGroup"
          >
            <div
              className="dscGridToolbarControlIconButton"
            >
              keyboard
            </div>
            <div
              className="dscGridToolbarControlIconButton"
            >
              display
            </div>
            <div
              className="dscGridToolbarControlIconButton"
            >
              fullScreen
            </div>
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    className="dscGridToolbarBottom"
    data-test-subj="dscGridToolbarBottom"
  >
    <div>
      bottom
    </div>
  </div>
</React.Fragment>
`;

exports[`renderCustomToolbar should render successfully 1`] = `
<React.Fragment>
  <EuiFlexGroup
    alignItems="center"
    className="dscGridToolbar"
    data-test-subj="dscGridToolbar"
    gutterSize="s"
    justifyContent="spaceBetween"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <React.Fragment>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="dscGridToolbarControlButton"
            >
              column
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="dscGridToolbarControlButton"
            >
              columnSorting
            </div>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <div
              className="dscGridToolbarControlButton"
            >
              additional
            </div>
          </EuiFlexItem>
        </React.Fragment>
      </EuiFlexGroup>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="dscGridToolbarControlGroup"
          >
            <div
              className="dscGridToolbarControlIconButton"
            >
              keyboard
            </div>
            <div
              className="dscGridToolbarControlIconButton"
            >
              display
            </div>
            <div
              className="dscGridToolbarControlIconButton"
            >
              fullScreen
            </div>
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</React.Fragment>
`;
